--- a/index.html
+++ b/index.html
@@ -60,23 +60,6 @@
       box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
       width: 100%;
     }
-    .preview-container {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      width: 100%;
-    }
-    .preview {
-      max-width: 100%;
-      max-height: 150px;
-      object-fit: contain;
-    }
-    .preview img {
-      border: 1px solid #4d4d4d;
-      border-radius: 3px;
-      max-width: 100%;
-      max-height: 100%;
-    }
     .thumbnail-container {
       width: 100%;
       overflow-x: auto;
@@ -247,9 +230,6 @@
       .display {
         min-height: 250px;
       }
-      .preview {
-        max-height: 200px;
-      }
       .thumbnail-container {
         max-height: 100px;
       }
@@ -357,11 +337,8 @@
                     <canvas id="canvas"></canvas>
                   ` : state.fileData?.startsWith('data:application/pdf') ? `
                     <div class="card">
-                      <div class="preview-container">
-                        <div class="preview" id="preview"></div>
-                      </div>
+                      <div class="thumbnail-container" id="thumbnail-container"></div>
                     </div>
-                    <div class="thumbnail-container" id="thumbnail-container"></div>
                     <label>Page Range (e.g., 1-3, 5)</label>
                     <input type="text" id="pageRange" placeholder="e.g., 1-3, 5" onchange="updatePageRange(this.value)">
                   ` : `
@@ -564,10 +541,8 @@
         const pdf = await loadingTask.promise;
         const numPages = pdf.numPages;
         const thumbnailContainer = document.getElementById('thumbnail-container');
-        const previewContainer = document.getElementById('preview');
-        if (!thumbnailContainer || !previewContainer) return;
+        if (!thumbnailContainer) return;
         thumbnailContainer.innerHTML = '';
-        previewContainer.innerHTML = '';
         for (let pageNum = 1; pageNum <= numPages; pageNum++) {
           const page = await pdf.getPage(pageNum);
           const viewport = page.getViewport({ scale: 0.25 });
@@ -584,15 +559,6 @@
           `;
           thumbnailDiv.addEventListener('click', () => togglePage(pageNum));
           thumbnailContainer.appendChild(thumbnailDiv);
-          if (pageNum === state.currentPreviewPage) {
-            const previewViewport = page.getViewport({ scale: 1.0 });
-            const previewCanvas = document.createElement('canvas');
-            const previewContext = previewCanvas.getContext('2d');
-            previewCanvas.height = previewViewport.height;
-            previewCanvas.width = previewViewport.width;
-            await page.render({ canvasContext: previewContext, viewport: previewViewport }).promise;
-            previewContainer.innerHTML = `<img src="${previewCanvas.toDataURL('image/png')}" alt="Page ${pageNum}">`;
-          }
         }
       } catch (error) {
         console.error('PDF render error:', error);
