--- a/index.html
+++ b/index.html
@@ -36,9 +36,14 @@
             <input type="file" id="pdf-upload" accept="application/pdf" class="mt-1 block w-full text-sm text-gray-500 file:mr-4 file:py-2 file:px-4 file:rounded file:border-0 file:text-sm file:font-semibold file:bg-blue-50 file:text-blue-700 hover:file:bg-blue-100" />
         </div>
 
+        <!-- Choose Pages Button -->
+        <div class="mb-4">
+            <button id="choose-pages-btn" class="w-full bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 disabled:bg-gray-400 disabled:cursor-not-allowed" disabled>Choose Pages</button>
+        </div>
+
         <!-- Scan File Button -->
         <div class="mb-4">
-            <button id="scan-btn" class="w-full bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 disabled:bg-gray-400 disabled:cursor-not-allowed" disabled>Scan File</button>
+            <button id="scan-btn" class="w-full bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 disabled:bg-gray-400 disabled:cursor-not-allowed" disabled>Scan File</button>
         </div>
 
         <!-- Page Count Display -->
@@ -68,6 +73,7 @@
         pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://unpkg.com/pdfjs-dist@3.11.174/build/pdf.worker.min.js';
 
         const pdfUpload = document.getElementById('pdf-upload');
+        const choosePagesBtn = document.getElementById('choose-pages-btn');
         const scanBtn = document.getElementById('scan-btn');
         const pageCountEl = document.getElementById('page-count');
         const totalPagesEl = document.getElementById('total-pages');
@@ -80,19 +86,21 @@
         let pdfDoc = null;
         let pdfArrayBuffer = null;
 
-        // Enable Scan File button when a file is selected
+        // Enable buttons when a file is selected
         pdfUpload.addEventListener('change', () => {
             if (pdfUpload.files.length > 0 && pdfUpload.files[0].type.includes('pdf')) {
+                choosePagesBtn.disabled = false;
                 scanBtn.disabled = false;
                 showMessage('', '');
             } else {
+                choosePagesBtn.disabled = true;
                 scanBtn.disabled = true;
                 showMessage('Please select a valid PDF file.', 'text-red-600');
             }
         });
 
-        // Handle Scan File button click
-        scanBtn.addEventListener('click', async () => {
+        // Process PDF (shared function for both buttons)
+        async function processPDF() {
             const file = pdfUpload.files[0];
             if (!file || !file.type.includes('pdf')) {
                 showMessage('Please select a valid PDF file.', 'text-red-600');
@@ -112,6 +120,7 @@
                 pdfPreviewEl.classList.remove('hidden');
                 clearBtn.classList.remove('hidden');
                 downloadBtn.classList.remove('hidden');
+                choosePagesBtn.disabled = true;
                 scanBtn.disabled = true;
 
                 // Clear previous content
@@ -140,16 +149,22 @@
                     pdfPreviewEl.appendChild(canvas);
                 }
 
-                showMessage('PDF scanned successfully!', 'text-green-600');
+                showMessage('PDF processed successfully!', 'text-green-600');
             } catch (error) {
-                showMessage('Error scanning PDF: ' + error.message, 'text-red-600');
+                showMessage('Error processing PDF: ' + error.message, 'text-red-600');
             }
-        });
+        }
+
+        // Handle Choose Pages button click
+        choosePagesBtn.addEventListener('click', processPDF);
+
+        // Handle Scan File button click
+        scanBtn.addEventListener('click', processPDF);
 
         // Download combined pages
         downloadBtn.addEventListener('click', async () => {
             if (!pdfDoc || !pdfArrayBuffer) {
-                showMessage('No PDF scanned.', 'text-red-600');
+                showMessage('No PDF processed.', 'text-red-600');
                 return;
             }
 
@@ -189,6 +204,7 @@
         // Clear the form
         clearBtn.addEventListener('click', () => {
             pdfUpload.value = '';
+            choosePagesBtn.disabled = true;
             scanBtn.disabled = true;
             pageCountEl.classList.add('hidden');
             pageSelectionEl.classList.add('hidden');
